# deathstar_satellite

./: LICENSE  README.md
cad_and_simulation/Simscape/: A2012XL_motor_rotating_Default_sldprt.STEP  Death_star.slx  Death_star.slx.original  Death_star.slx.r2024b  Death_star.slx.r2025a  Death_star.slxc  Death_star_DataFile.asv  Death_star_DataFile.m  Death_star_DataFile.mat  Inertial_disk_Default_sldprt.STEP  angle_test.m  inner_loop_test.m  sysid_motor_estim_final.mat  torqueThrottle.m  yaw_pitch_roll_template.mldatx  yaw_pitch_roll_template_v2.mldatx  yaw_pitch_roll_template_v3.mldatx
cad_and_simulation/SolidWorks/: A2012XL_motor.SLDPRT  A2012XL_motor_fixed.SLDPRT  A2012XL_motor_rotating.SLDPRT  DeathStar.SLDASM  DeathStar_simscape_export.SLDASM  DeathStar_simscape_export_updated.SLDASM  Inertial_disk.SLDPRT  Part1.SLDPRT  air_valve.SLDPRT  air_vessel.SLDPRT  air_vessel_nut.SLDPRT  air_vessel_support.SLDPRT  battery_holder_full.step.SLDPRT  camera_laser_mount.step.SLDPRT  capacitor_banks.SLDPRT  horitzontal_frame.SLDPRT  horitzontal_plate.SLDPRT  motor_support.SLDPRT  pcb.SLDPRT  pitch_vertical_plate.SLDPRT  ring_frame.SLDPRT  rotating_elements.SLDASM  sphere.SLDPRT  sphere_interface.SLDPRT  sphere_quarter.SLDPRT  sphere_without_interface.SLDPRT  vertical_plates.SLDPRT  weight-y.SLDPRT  yaw_vertical_plate.SLDPRT
cad_and_simulation/add_to_cad_redo/: Assembly_rpi.SLDASM  Assembly_rpi.step  base.SLDPRT  bolt1.SLDPRT  (+31 more)
raspberry/home/deathstar/deathstar/control/controller1/: CMakeLists.txt  constellation_sensor.cpp  constellation_sensor.hpp  controller.cpp  controller.hpp  main.cpp
reaction_wheels_sysid/: syst_id_raw_RPM_ssestDist_stability.m
schematics/: deathstar_connections.kicad_sch  deathstar_interconnect_pcb.kicad_sch  deathstar_laserSubmodule.kicad_sch  interface_power_motors.kicad_sch
(+66 files in other folders)
